# ENPM700-Group13-Midterm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Video Result.webm  compile_commands.json
.cache/clangd/index/: detector.cpp.1ABF925AC38A9BB4.idx  detector.hpp.33D9B9562B8266AE.idx  lib1.hpp.339FCD13484A2526.idx  lib2.hpp.89C5362A092F6B4D.idx  main.cpp.6B68785230D66E78.idx  main.cpp.9F5A137B0EBDE9C9.idx  src.cpp.1F8762F7446CB549.idx  src.cpp.272753B2753290F2.idx  stream_data.cpp.5CE1EEC31FACAE22.idx  stream_data.hpp.D73254D6B3E29F7B.idx  test.cpp.E2C340DAFDD860DB.idx
.github/workflows/: detection.yml  run-unit-test-and-upload-codecov.yml
app/: CMakeLists.txt  detector.cpp  human_avoidance.cpp  human_detector.cpp  main.cpp  stream_data.cpp
docs/html/: annotated.html  classHumanAvoidance-members.html  classHumanAvoidance.html  classHumanAvoidance__coll__graph.map  classHumanAvoidance__coll__graph.md5  classHumanAvoidance_a61c92ab730e3aaedb07a9efc86521296_icgraph.map  classHumanAvoidance_a61c92ab730e3aaedb07a9efc86521296_icgraph.md5  classHumanAvoidance_a9d484fd9d212adb28ef5c19969f12605_icgraph.map  classHumanAvoidance_a9d484fd9d212adb28ef5c19969f12605_icgraph.md5  classHumanDetector-members.html  classHumanDetector.html  classHumanDetector__coll__graph.map  classHumanDetector__coll__graph.md5  classHumanDetector_a4e6de049f1615840f098aa69a60291fb_cgraph.map  classHumanDetector_a4e6de049f1615840f098aa69a60291fb_cgraph.md5  classHumanDetector_a4e6de049f1615840f098aa69a60291fb_icgraph.map  classHumanDetector_a4e6de049f1615840f098aa69a60291fb_icgraph.md5  classHumanDetector_a6bd330e752f0711e6967834f9f90c336_icgraph.map  classHumanDetector_a6bd330e752f0711e6967834f9f90c336_icgraph.md5  classHumanDetector_aad878ef013d488473dd0756ed32aeb02_cgraph.map  classHumanDetector_aad878ef013d488473dd0756ed32aeb02_cgraph.md5  classHumanDetector_aad878ef013d488473dd0756ed32aeb02_icgraph.map  classHumanDetector_aad878ef013d488473dd0756ed32aeb02_icgraph.md5  classes.html  dir_000000_000001.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  human__avoidance_8cpp.html  human__avoidance_8cpp__incl.map  human__avoidance_8cpp__incl.md5  human__avoidance_8hpp.html  (+20 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
include/: detector.hpp  human_avoidance.hpp  human_detector.hpp  robot_controller.hpp  stream_data.hpp
results/: cpplint_report.txt
test/: CMakeLists.txt  main.cpp  test.cpp
